--- a/events.html
+++ b/events.html
@@ -42,80 +42,32 @@
     </nav>
 
     <div class="container mt-4">
-      <h2 class="display-1 text-primary text-center mt-4">Events</h2>
+      <h2 class="display-1 text-danger text-center mt-4">Events</h2>
       
       <div class="card mt-4">
         <div class="row">
           <div class="col-md-4">
             <img class="img-fluid" src="https://ec.europa.eu/jrc/sites/jrcsh/files/styles/normal-responsive/public/fotolia-92027264european-day-forest-green-forest.jpg?itok=biCWJPQQ">
           </div>
-          <div class="col-md-8">
+          <div class="col-md-8 px-4">
             <h3 class="card-title mt-4">Yummy Food</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              qui officia deserunt mollit anim id est laborum... <a href="#">ver más</a>
             </p>
             <p>
-              <span>Location: </span><br>
-              <span>Duration: </span>
+              <span><i class="fas fa-map-marked-alt"></i> Location: </span><br>
+              <span><i class="fas fa-calendar-day"></i> Date: </span><br>
+              <span><i class="far fa-clock"></i> Estimated Duration: </span><br>
             </p>
-            <button class="btn btn-info mb-4">View More</button>
-            <button class="btn btn-danger mb-4 ">Inscribirme</button>
+            <button class="btn btn-info mb-4 text-white"><i class="fas fa-info-circle"></i> More Details</button>
+            <button class="btn btn-danger mb-4"><i class="fas fa-hand-point-up"></i> Join</button>
           </div>
-        </div>
+        </div> 
       </div>
 
-      <div class="card mt-4">
-        <div class="row">
-          <div class="col-md-4">
-            <img class="img-fluid" src="https://ec.europa.eu/jrc/sites/jrcsh/files/styles/normal-responsive/public/fotolia-92027264european-day-forest-green-forest.jpg?itok=biCWJPQQ">
-          </div>
-          <div class="col-md-8">
-            <h3 class="card-title mt-4">Yummy Food</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <button class="btn btn-danger mb-4 ">Inscribirme</button>
-          </div>
-        </div>
-      </div>
 
-      <div class="card mt-4">
-        <div class="row">
-          <div class="col-md-4">
-            <img class="img-fluid" src="https://ec.europa.eu/jrc/sites/jrcsh/files/styles/normal-responsive/public/fotolia-92027264european-day-forest-green-forest.jpg?itok=biCWJPQQ">
-          </div>
-          <div class="col-md-8">
-            <h3 class="card-title mt-4">Yummy Food</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <button class="btn btn-danger mb-4 ">Inscribirme</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="card mt-4">
-        <div class="row">
-          <div class="col-md-4">
-            <img class="img-fluid" src="https://ec.europa.eu/jrc/sites/jrcsh/files/styles/normal-responsive/public/fotolia-92027264european-day-forest-green-forest.jpg?itok=biCWJPQQ">
-          </div>
-          <div class="col-md-8">
-            <h3 class="card-title mt-4">Yummy Food</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <button class="btn btn-danger mb-4 ">Inscribirme</button>
-          </div>
-        </div>
-      </div>
+      
 
     </div>
 </body>
