--- a/volunteering.html
+++ b/volunteering.html
@@ -49,21 +49,21 @@
           <div class="col-md-4">
             <img class="img-fluid" src="https://ec.europa.eu/jrc/sites/jrcsh/files/styles/normal-responsive/public/fotolia-92027264european-day-forest-green-forest.jpg?itok=biCWJPQQ">
           </div>
-          <div class="col-md-8">
+          <div class="col-md-8 px-4">
             <h3 class="card-title mt-4">Yummy Food</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              qui officia deserunt mollit anim id est laborum... <a href="#">ver más</a>
             </p>
             <p>
-              <span>Location: </span><br>
-              <span>Duration: </span>
+              <span><i class="fas fa-map-marked-alt"></i> Location: </span><br>
+              <span><i class="fas fa-plane-departure"></i> Start Date: </span><br>
+              <span><i class="fas fa-calendar-day"></i> Duration: </span>
             </p>
-            <button class="btn btn-info mb-4">View More</button>
-            <button class="btn btn-danger mb-4 ">Inscribirme</button>
+            <button class="btn btn-info mb-4 text-white"><i class="fas fa-info-circle"></i> Application Details</button>
+            <button class="btn btn-danger mb-4"><i class="fas fa-file-alt"></i> Aplicar</button>
           </div>
-        </div>
+        </div> 
       </div>
 
       <div class="card mt-4">
@@ -71,16 +71,21 @@
           <div class="col-md-4">
             <img class="img-fluid" src="https://ec.europa.eu/jrc/sites/jrcsh/files/styles/normal-responsive/public/fotolia-92027264european-day-forest-green-forest.jpg?itok=biCWJPQQ">
           </div>
-          <div class="col-md-8">
+          <div class="col-md-8 px-4">
             <h3 class="card-title mt-4">Yummy Food</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              qui officia deserunt mollit anim id est laborum... <a href="#">ver más</a>
             </p>
-            <button class="btn btn-danger mb-4 ">Inscribirme</button>
+            <p>
+              <span><i class="fas fa-map-marked-alt"></i> Location: </span><br>
+              <span><i class="fas fa-plane-departure"></i> Start Date: </span><br>
+              <span><i class="fas fa-calendar-day"></i> Duration: </span>
+            </p>
+            <button class="btn btn-info mb-4 text-white"><i class="fas fa-info-circle"></i> Application Details</button>
+            <button class="btn btn-danger mb-4"><i class="fas fa-file-alt"></i> Aplicar</button>
           </div>
-        </div>
+        </div> 
       </div>
 
       <div class="card mt-4">
@@ -88,33 +93,21 @@
           <div class="col-md-4">
             <img class="img-fluid" src="https://ec.europa.eu/jrc/sites/jrcsh/files/styles/normal-responsive/public/fotolia-92027264european-day-forest-green-forest.jpg?itok=biCWJPQQ">
           </div>
-          <div class="col-md-8">
+          <div class="col-md-8 px-4">
             <h3 class="card-title mt-4">Yummy Food</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              qui officia deserunt mollit anim id est laborum... <a href="#">ver más</a>
             </p>
-            <button class="btn btn-danger mb-4 ">Inscribirme</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="card mt-4">
-        <div class="row">
-          <div class="col-md-4">
-            <img class="img-fluid" src="https://ec.europa.eu/jrc/sites/jrcsh/files/styles/normal-responsive/public/fotolia-92027264european-day-forest-green-forest.jpg?itok=biCWJPQQ">
-          </div>
-          <div class="col-md-8">
-            <h3 class="card-title mt-4">Yummy Food</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <span><i class="fas fa-map-marked-alt"></i> Location: </span><br>
+              <span><i class="fas fa-plane-departure"></i> Start Date: </span><br>
+              <span><i class="fas fa-calendar-day"></i> Duration: </span>
             </p>
-            <button class="btn btn-danger mb-4 ">Inscribirme</button>
+            <button class="btn btn-info mb-4 text-white"><i class="fas fa-info-circle"></i> Application Details</button>
+            <button class="btn btn-danger mb-4"><i class="fas fa-file-alt"></i> Aplicar</button>
           </div>
-        </div>
+        </div> 
       </div>
 
     </div>
