--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         <div class="row mb-4">
             <i class="fab fa-instagram social-icon"></i>
             <i class="fab fa-facebook-square social-icon"></i>
-            <i class="fab fa-tiktok social-icon"></i>
             
         </div>
     	
@@ -197,6 +196,10 @@
                 </div>
             </div>
         </section>
+
+        <!-- LAST EVENTS -->
+
+
     </main>
 
 
