--- a/index.html
+++ b/index.html
@@ -149,27 +149,9 @@
                                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  culpa qui officia deserunt mollit anim id est laborum.
                                 </p>
                                 <div class="socials mx-auto" style="width:200px">
-                                    <a href="#"><i class="fab fa-instagram social-icon mx-2"></i></a>
-                                    <a href="#"><i class="fab fa-facebook-square social-icon mx-2"></i></a>
-                                    <a href="#"><i class="fab fa-tiktok social-icon mx-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-6 col-lg-4 mt-4">
-                            <img  class="card-img-top" src="https://i.hurimg.com/i/hdn/75/0x0/5da425cc0f25441cf4279f1d.jpg">
-
-                            <div class="card-body">
-                                <h5 class="card-title">Technology <span class="text-muted">For The Kids</span></h5>
-                                <h6>City: Craiova</h6>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  culpa qui officia deserunt mollit anim id est laborum.
-                                </p>
-                                <div class="socials">
-                                    <a href="#"><i class="fab fa-instagram social-icon"></i></a>
-                                    <a href="#"><i class="fab fa-facebook-square social-icon"></i></a>
-                                    <a href="#"><i class="fab fa-tiktok social-icon"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-instagram social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-facebook-square social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-tiktok social-icon mx-2"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -184,21 +166,136 @@
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  culpa qui officia deserunt mollit anim id est laborum.
                                 </p>
-                                <div class="socials mx-auto">
-                                    <a href="#"><i class="fab fa-instagram social-icon"></i></a>
-                                    <a href="#"><i class="fab fa-facebook-square social-icon"></i></a>
-                                    <a href="#"><i class="fab fa-tiktok social-icon"></i></a>
+                                <div class="socials mx-auto" style="width:200px">
+                                    <a href="#" class="h1"><i class="fab fa-instagram social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-facebook-square social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-tiktok social-icon mx-2"></i></a>
                                 </div>
                             </div>
                         </div>
 
+                        <div class="col-md-6 col-lg-4 mt-4">
+                            <img  class="card-img-top" src="https://i.hurimg.com/i/hdn/75/0x0/5da425cc0f25441cf4279f1d.jpg">
+
+                            <div class="card-body">
+                                <h5 class="card-title">Technology <span class="text-muted">For The Kids</span></h5>
+                                <h6>City: Craiova</h6>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  culpa qui officia deserunt mollit anim id est laborum.
+                                </p>
+                                <div class="socials mx-auto" style="width:200px">
+                                    <a href="#" class="h1"><i class="fab fa-instagram social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-facebook-square social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-tiktok social-icon mx-2"></i></a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 col-lg-4 mt-4">
+                            <img  class="card-img-top" src="https://i.hurimg.com/i/hdn/75/0x0/5da425cc0f25441cf4279f1d.jpg">
+
+                            <div class="card-body">
+                                <h5 class="card-title">Technology <span class="text-muted">For The Kids</span></h5>
+                                <h6>City: Craiova</h6>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  culpa qui officia deserunt mollit anim id est laborum.
+                                </p>
+                                <div class="socials mx-auto" style="width:200px">
+                                    <a href="#" class="h1"><i class="fab fa-instagram social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-facebook-square social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-tiktok social-icon mx-2"></i></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- LAST EVENTS -->
+        <!-- LAST PROJECTS -->
 
+        <section id="last-projects" class="mb-5">
+            <div class="wrapper">
+                <div class="container">
+                    <h2 class="mt-4 text-info display-1 text-center">Last Projects</h2>
+                    <div class="row">
+                        <div class="col-md-6 col-lg-4 mt-4">
+                            <img  class="card-img-top" src="https://i.hurimg.com/i/hdn/75/0x0/5da425cc0f25441cf4279f1d.jpg">
+
+                            <div class="card-body">
+                                <h5 class="card-title">Technology <span class="text-muted">For The Kids</span></h5>
+                                <h6>City: Craiova</h6>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  culpa qui officia deserunt mollit anim id est laborum.
+                                </p>
+                                <div class="socials mx-auto" style="width:200px">
+                                    <a href="#" class="h1"><i class="fab fa-instagram social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-facebook-square social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-tiktok social-icon mx-2"></i></a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 col-lg-4 mt-4">
+                            <img  class="card-img-top" src="https://i.hurimg.com/i/hdn/75/0x0/5da425cc0f25441cf4279f1d.jpg">
+
+                            <div class="card-body">
+                                <h5 class="card-title">Technology <span class="text-muted">For The Kids</span></h5>
+                                <h6>City: Craiova</h6>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  culpa qui officia deserunt mollit anim id est laborum.
+                                </p>
+                                <div class="socials mx-auto" style="width:200px">
+                                    <a href="#" class="h1"><i class="fab fa-instagram social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-facebook-square social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-tiktok social-icon mx-2"></i></a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 col-lg-4 mt-4">
+                            <img  class="card-img-top" src="https://i.hurimg.com/i/hdn/75/0x0/5da425cc0f25441cf4279f1d.jpg">
+
+                            <div class="card-body">
+                                <h5 class="card-title">Technology <span class="text-muted">For The Kids</span></h5>
+                                <h6>City: Craiova</h6>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  culpa qui officia deserunt mollit anim id est laborum.
+                                </p>
+                                <div class="socials mx-auto" style="width:200px">
+                                    <a href="#" class="h1"><i class="fab fa-instagram social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-facebook-square social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-tiktok social-icon mx-2"></i></a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 col-lg-4 mt-4">
+                            <img  class="card-img-top" src="https://i.hurimg.com/i/hdn/75/0x0/5da425cc0f25441cf4279f1d.jpg">
+
+                            <div class="card-body">
+                                <h5 class="card-title">Technology <span class="text-muted">For The Kids</span></h5>
+                                <h6>City: Craiova</h6>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad  culpa qui officia deserunt mollit anim id est laborum.
+                                </p>
+                                <div class="socials mx-auto" style="width:200px">
+                                    <a href="#" class="h1"><i class="fab fa-instagram social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-facebook-square social-icon mx-2"></i></a>
+                                    <a href="#" class="h1"><i class="fab fa-tiktok social-icon mx-2"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
