--- a/volunteering_article.html
+++ b/volunteering_article.html
@@ -42,5 +42,75 @@
         </div>
       </div>
     </nav>
+
+    <main role="main" class="container my-4">
+    <div class="row">
+      <div class="col-md-8">
+        <h4 class="text-success mt-5"><i class="fas fa-book-reader"></i> Project Description</h4>
+        <p class="my-3">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+
+        <h4 class="text-success mt-5"><i class="fas fa-utensils"></i> <i class="fas fa-house-user"></i> Accommodation</h4>
+        <p class="my-3">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+
+        <h4 class="text-success mt-5"><i class="fas fa-random"></i> Training</h4>
+
+        <p class="my-3">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+
+        <h4 class="text-success mt-5"><i class="fas fa-user-alt"></i> Participant Profile</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <div class="col-md-4">
+        <div class="content-section">
+          <h3 class="reggae text-center">Project Name</h3>
+          <p class=''>Organization: <span class="text-muted">Name</span>
+            <ul class="list-group">
+              <li class="list-group-item list-group-item-light"><i class="far fa-calendar-alt"></i> Start Date: </li>
+              <li class="list-group-item list-group-item-light"><i class="fas fa-hourglass-start"></i> Duration: </li>
+              <li class="list-group-item list-group-item-light"><i class="far fa-calendar-times"></i> Deadline Application: </li>
+              <li class="list-group-item list-group-item-light"><i class="fas fa-phone-alt"></i> Tel. Number: </li>
+              <li class="list-group-item list-group-item-light"><i class="far fa-envelope"></i> Email: </li>
+              <li class="list-group-item list-group-item-light"><i class="fas fa-seedling"></i> Topics</li>
+            </ul>
+          </p>
+        </div>
+      </div>
+    </div>
+  </main>
+    
+    </section>
 </body>
 </html>
