--- a/volunteering.html
+++ b/volunteering.html
@@ -73,7 +73,8 @@
           </div>
           <div class="col-md-8 px-4">
             <h3 class="card-title mt-4">Yummy Food</h3>
-            <p>
+            <span class="text-muted h6">Asotiatia Comunitati Pentru Comunitati</span>
+            <p class="mt-4">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               qui officia deserunt mollit anim id est laborum... <a href="#">ver más</a>
             </p>
@@ -82,7 +83,9 @@
               <span><i class="fas fa-plane-departure"></i> Start Date: </span><br>
               <span><i class="fas fa-calendar-day"></i> Duration: </span>
             </p>
-            <button class="btn btn-info mb-4 text-white"><i class="fas fa-info-circle"></i> Application Details</button>
+            <a href="volunteering_article.html">
+              <button class="btn btn-info mb-4 text-white"><i class="fas fa-info-circle"></i> Application Details</button>
+            </a>
             <button class="btn btn-danger mb-4"><i class="fas fa-file-alt"></i> Aplicar</button>
           </div>
         </div> 
